# egg

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
egg/: __init__.py  base.py  learners.py
egg/actors/: __init__.py  dreamer_bps.py  fixed_bpc.py  fixed_bps.py
egg/environments/: __init__.py  bernoulli_noise_wrapper.py  bit_parity.py  catalog.py  finite_prompt_wrapper.py  gaussian_noise_wrapper.py  key_value.py  landmine_wrapper.py  noisy_reward.py  poison_token_wrapper.py  reverse_copy.py  subsequence_match.py  zeros_prompt_wrapper.py
egg/lib/: __init__.py  ar_sample.py  logging.py  quantization.py  statistics.py
egg/losses/: __init__.py  catalog.py  common.py  dg.py  kondo.py  online_star.py  pmpo.py  ppo.py  reinforce.py  screened_pg.py  xent.py
egg/networks/: __init__.py  embedding_noise.py  linear.py  logit_noise.py  logit_wrapper.py  quantized_transformers.py  transformers.py
egg/trainers/: __init__.py  kondo_async.py  vanilla_async.py  vanilla_sync.py
experiments/: __init__.py
experiments/baseline/: __init__.py  run.py  run_test.py
experiments/distributed/: README.md  __init__.py  run.py  run_test.py
experiments/dpg/: README.md  __init__.py  run.py  run_test.py
experiments/kondo/: README.md  __init__.py  run.py  run_test.py
